<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="AddProfileViewModel"
            type="id.ac.ui.cs.mobileprogramming.hira.lifechecker.ui.add_profile.AddProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add_profile.AddProfileActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addprofile_description"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/addprofile_name_placeholder" />

                <EditText
                    android:id="@+id/edit_name_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:text="@={AddProfileViewModel.nama}"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/addorangterpercaya_notelp_placeholder" />

                <EditText
                    android:id="@+id/edit_notelp_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="@={AddProfileViewModel.notelp}"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/addprofile_alamat_placeholder" />

                <EditText
                    android:id="@+id/edit_alamat_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:text="@={AddProfileViewModel.alamat}"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/addprofile_golongandarah_placeholder" />

                <EditText
                    android:id="@+id/edit_golongandarah_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete"
                    android:text="@={AddProfileViewModel.golonganDarah}"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/addprofile_button_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{AddProfileViewModel.valid}"
                    android:paddingTop="8dp"
                    android:text="@string/addprofile_button_title" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
